# RoPoSLAMS

./: .gitignore  .gitmodules  README.md
gtsam-demo/: CMakeLists.txt  PlanarSLAMExample.cpp
pose_optimization/: 2Dpose_optimization  2Dpose_optimization.cpp  2Dpose_optimization1.cpp  2Dpose_optimization_ALOAM  2Dpose_optimization_FLOAM  2Dpose_optimization_notsync.cpp  2Dpose_optimization_prior.cpp  3Dpose_optimization  3Dpose_optimization.cpp  CMakeCache.txt  CMakeLists.txt  IMU_integrate.txt  Makefile  a.out  cmake_install.cmake  covertandplot_python.ipynb  optimized_poses.txt  optimized_poses_with_imu.txt  optimized_poses_with_imu_aloam.txt  optimized_poses_with_imu_kitti_0018_notsync.txt  optimized_poses_with_imu_kitti_0027_notsync.txt  optimized_poses_without_imu.txt  optimized_poses_without_imu_aloam.txt  optimized_poses_without_imu_kitti_0018_notsync.txt  optimized_poses_without_imu_kitti_0027_notsync.txt  plot  plot.cpp  plot_python.ipynb  pose_optimization.cpp  pose_optimization.h  read_data.py  readme.txt  se2_batch_solution.py  simplePose2.cpp  testing.cpp  trial.cpp
pose_optimization/data/: aloam_kitti_0018.txt  aloam_kitti_0027.csv  aloam_kitti_0028.txt  aloam_kitti_2011_09_30_drive_0028_synced.csv  aloam_pose_kitti_2011_09_30_0027.txt  aloam_tf_kitti_2011_09_26_drive_0101_synced.csv  aloam_tf_kitti_2011_09_30_drive_0018.csv  floam_0018_imu_notsync.csv  floam_0018_not_synched.txt  floam_0018_slamposes_notsync.txt  floam_0018_tf_notsyn.txt  floam_0027_base_notsync.txt  floam_0027_gt_notsync.txt  floam_0027_imu_notsync.txt  floam_gt_0018_notsync.txt  floam_gt_kitti_2011_09_30_0027_notsync.txt  floam_gt_kitti_2011_09_30_drive_notsync.txt  floam_imu_kitti_2011_09_30_0027_notsync.txt  floam_imu_kitti_2011_09_30_drive_notsync.txt  floam_kitti_0018.txt  floam_pose_kitti_2011_09_30_0027_notsync.txt  floam_pose_kitti_2011_09_30_drive_notsync.txt  floam_tf_kitti_2011_09_30_drive_0018.txt  floam_tf_kitti_2011_09_30_drive_0028_synced.txt  floam_tf_kitti_2011_09_30_drive_new.txt  floam_tf_kitti_2011_09_30_drive_notsync.txt  gps_kitti_2011_09_26_drive_0101_synced.txt  gps_kitti_2011_09_30_drive_0018.txt  ground_truth_kitti_2011_09_26_drive_0101_synced.txt  imu_kitti_2011_09_26_drive_0101_synced.txt  imu_kitti_2011_09_30_drive_0028_synced.txt  visualize_tf_and_process_data.ipynb
pose_optimization/reading_data/: data_read.cpp  data_read.h
reading_data/: CMakeCache.txt  CMakeLists.txt  Makefile  Pose3_tf.cpp  a.out  cmake_install.cmake  data_read  data_read.cpp  data_read.h  imuRead  imuRead.cpp  read_data  read_tf  read_tf.cpp  read_tf.h
reading_data/data/: .~lock.imu.csv#  (+5 more)
(+31 files in other folders)
